@@ -19,6 +19,11 @@ MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar
   ENDIF(MSVC)
 ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
+MACRO(COMPRESS_BINARY)
+  IF(NOT USE_GLOBAL_COMPRESSION)
+    COMPRESS_BINARY_TARGET()
+  ENDIF()
+ENDMACRO(COMPRESS_BINARY)
 
 MACRO(COMPRESS_BINARY_TARGET)
   SET(THE_TARGET "${TARGET_NAME}")
