@@ -12,3 +12,4 @@ FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )
 ADD_MSVC_PRECOMPILED_HEADER("ModuleLoader.h" "ModuleLoader.cpp" SOURCE_FILES)
 
 ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "MemoryModule.c")
+
