@@ -20,3 +20,4 @@ SET_TARGET_PROPERTIES(${TARGET_NAME}_pack PROPERTIES
 	PREFIX ""
 	IMPORT_PREFIX "plug_"
 	SUFFIX ".lpak")
+
