@@ -47,4 +47,3 @@ GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
 
 # INSTALL_PDB(${TARGET_NAME} "modules/")
 
-# COMPRESS_BINARY()
