@@ -39,7 +39,5 @@ ADD_FILES(INTF_FILES "../interface/helpers.h")
 
 GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
 
-# COMPRESS_BINARY()
-
 # INSTALL_PDB(${TARGET_NAME} "modules/")
 
