@@ -13,9 +13,3 @@ SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
 	OUTPUT_NAME "${PLUG_NAME}"
 	PREFIX ""
 	SUFFIX ".sgp")
-    
-# INSTALL(TARGETS ${TARGET_NAME}
-# 	RUNTIME DESTINATION ${TARGET_DIR}
-# 	LIBRARY DESTINATION ${TARGET_DIR})
-
-# COMPRESS_BINARY()
