@@ -54,7 +54,9 @@ ADD_DEPENDENCIES(${TARGET_NAME} ${TARGET_NAME}_images)
 # SimKernel must be constructed to build this executable.
 # ADD_DEPENDENCIES(${TARGET_NAME} SimKernel)
 
-COMPRESS_BINARY_TARGET()
+IF(USE_GLOBAL_COMPRESSION)
+	COMPRESS_BINARY_TARGET()
+ENDIF()
 
 INSTALL(TARGETS ${TARGET_NAME}
 	RUNTIME DESTINATION ${TARGET_DIR}
